# NRES

./: .gitignore  CMakeLists.txt  README.md  example.cpp
include/: NRES.hpp  NREntitySystem.h  nresComponent.hpp  nresComponentData.h  nresEntity.h  nresEntity.hpp  nresMapOfSets.h  nresSystem.h  nresSystem.hpp  nresTypedefs.h  nresTypedefs.hpp  nresWorld.h  nresWorld.hpp
src/: nresComponent.cpp  nresComponentData.cpp  nresEntity.cpp  nresSystem.cpp  nresWorld.cpp
